--- a/barber-shop-project/src/App.css
+++ b/barber-shop-project/src/App.css
@@ -1,38 +1,33 @@
 .App {
-  text-align: center;
-}
+    width: 100vw;
+    height: 100vh;
+    background-image: linear-gradient(180deg, #a69dbe 0%, #444658 100%);
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color:#ebe5e5;
+    max-height: 70px;
+    display: flex;
+    justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
+.options {
+    display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.option {
+    list-style: none;
+    font-size: 16px;
+    min-width: 120px;
+    max-height: auto;
+    height: 100%;
+    padding: 0 15px;
+    cursor: pointer;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+
 }
